--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
     font-family: 'Arial', sans-serif;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     background-color: #f9f9f9;
@@ -40,7 +40,31 @@ header .nav-links a {
 
 section {
     padding: 20px;
-    height: 80vh;
+}
+
+/* Filters Section */
+.filters {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 0;
+    padding: 0 20px;
+}
+
+#search-bar {
+    width: 70%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#category-filter {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
 }
 
 /* Products Section */
@@ -55,12 +79,19 @@ section {
     gap: 20px;
     justify-content: center;
 }
+.product-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 0 20px;
+}
 
 .product-card, .cart-item {
     background-color: white;
     border: 1px solid #ddd;
     border-radius: 10px;
-    padding: 15px;
+    padding: 10px;
+    margin: 15px !important;
     width: 250px;
     text-align: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -86,12 +117,32 @@ section {
     background-color: #45a049;
 }
 
+#product-info{
+    display: flex;
+}
+
+#product-desc{
+    margin-left: 20px;
+}
+
 .cart-total {
     text-align: center;
     margin-top: 20px;
 }
+.cart-list{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.checkout-cart {
+    display: flex;
+    justify-content: space-around;
+}
 
-#checkout-btn {
+
+
+#checkout-btn , #add-to-cart-btn{
     display: block;
     margin: 20px auto;
     background-color: #4caf50;
@@ -101,6 +152,7 @@ section {
     font-size: 1rem;
     cursor: pointer;
     border-radius: 5px;
+
 }
 
 #checkout-btn:hover {
